[tool.poetry]
name = "rep-counter"
version = "0.1.0"
description = ""
authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.1.2"
scikit-image = "^0.16.2"
argser = "^0.0.14"
keras = "^2.3.1"
tensorflow = ">=2.1rc0"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

